--- a/cv.tex
+++ b/cv.tex
@@ -594,17 +594,19 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \section{CourseWork}
 
-\begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
+\begin{center}
+    \begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
 
-    Theory of Computation (CS340) & (CS201) Discreet Mathematics \\
-    Abstract Algebra (CS203A) & (CS202A) Logic for Computer Science \\
-    Data Structure and Algorithms (CS210) & (CS345) Design and Analysis of Algorithms \\
-    Operating Systems (CS330) & (CS335) Compilers \\
-    Computer Networks (CS425) &  (CS628) Computer and Internet Security \\
-    Computer Organization (CS220) & (CS350) Principles of Programming Languages \\
-    Artificial Intelligence (CS365) & (CS251 \& CS252) Computing Laboratory \\
-    Computational Methods in Engineering (ESO208A) & (CS300) Technical Communication \\
-    Linear Algebra (MTH102) &  (MTH101) Multivariate Calculus \\
-                     \\
-\end{tabular}
+        Theory of Computation (CS340) & (CS201) Discreet Mathematics \\
+        Abstract Algebra (CS203A) & (CS202A) Logic for Computer Science \\
+        Data Structure and Algorithms (CS210) & (CS345) Design and Analysis of Algorithms \\
+        Operating Systems (CS330) & (CS335) Compilers \\
+        Computer Networks (CS425) &  (CS628) Computer and Internet Security \\
+        Computer Organization (CS220) & (CS350) Principles of Programming Languages \\
+        Artificial Intelligence (CS365) & (CS251 \& CS252) Computing Laboratory \\
+        Computational Methods in Engineering (ESO208A) & (CS300) Technical Communication \\
+        Linear Algebra (MTH102) &  (MTH101) Multivariate Calculus \\
+    \end{tabular}
+\end{center}
+
 \end{document}
