--- a/cv.tex
+++ b/cv.tex
@@ -106,6 +106,10 @@
     \vspace{-0.5cm}
 }
 
+\newcommand{\github}{
+    \includegraphics[height=12pt]{octocatvector.eps}
+}
+
 %----------------------------------------------------------------------------------------
 % DOCUMENT BEGINS HERE
 %----------------------------------------------------------------------------------------
@@ -156,7 +160,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{1.5cm}p{15.5cm}r}
 
-    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.6/10.0\\
+    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.5/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
 
     \textsc{Jul 2011} & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
@@ -423,9 +427,9 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {OARS}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Scraped the institute academic records to create a database of all course offered by the
+                   \item Scraped the institute academic records to create a database of all courses offered by the
                        institute.
-                   \item Created an AngularJS based frontend for the scraped data with a focus on ease of use
+                   \item Created an AngularJS based frontend search for the scraped data with a focus on ease of use
                        and accessibility.
                    \item \href{https://navya.github.io/oars}{https://navya.github.io/oars}
                \end{itemize}
@@ -446,7 +450,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {ShuffleRun}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Designed a web app which selects a music track from a user's library based on his running speed.
+                  \item Designed a web app which selects a music track from a user's music library based on his current running speed.
                   \item Pitched the idea at \textbf{Yahoo! HackU 2013}.
                   \item Recieved an honorable mention in \textbf{Yahoo!  HackU 2013} for the created hack.
                   \item \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun}
@@ -460,8 +464,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
               \begin{itemize}[leftmargin=0.5cm]
                   \item Conceptualized the idea of VANI - an extensible student community platform consisting
                       of a Student Wiki, Forums, Community Search, Calendar and Lost and Found.
-                  \item Developed the Lost and Found module using \textbf{Drupal}.
-                  \item Conducted session on the extending VANI for the benefit of students.
+                  \item Developed the Lost and Found module using \textbf{Drupal} for VANI.
+                  \item Conducted sessions on the extending VANI to create rich applications.
               \end{itemize}
           }
 
@@ -472,34 +476,37 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                   \item Explored various facets of \textbf{GNU/Linux} like the file system, process management,
                       memory management, shell interface etc.
                   \item Documented all salient points for use by the freshmen of the insititue.
-                  \item
-                      \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
+                  \item \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
               \end{itemize}
           }
-
-\projectlist {Web Development}
-             {
-                 \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
-                         \href{www.udghosh.org} {[URL]}
-                     \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
-                         \href{http://www.iitk.ac.in/hall5} {[URL]}
-                     \item \textbf{ALI}: Antaragni Leadership Initiative.
-                         \href{www.antargni.in/ali} {[URL]}
-                 \end{itemize}
-             }
 
 \projectlist {Projects on Github}
              {
                  \begin{itemize}[leftmargin=0.5cm]
                      \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                         \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]}
+                         \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
                      \item \textbf{Prezto}: a fork of the Prezto ZSH framework
-                         \href{https://github.com/srijanshetty/prezto} {[Git Repo]}
+                         \href{https://github.com/srijanshetty/prezto} {https://github.com/srijanshetty/prezto}
                      \item \textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
-                         \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]}
+                         \href{https://github.com/srijanshetty/oh-my-zsh} {https://github.com/srijanshetty/oh-my-zsh}
                      \item \textbf{DS}: implementation of certain algorithms and data structures
-                         \href{https://github.com/srijanshetty/DS} {[Git Repo]}
+                         \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
+                     \item \textbf{Custom}: handy configurations and shortcuts for ZSH
+                         \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
+                     \item \textbf{Notes}: notes on various computing concepts
+                         \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
+                 \end{itemize}
+             }
+
+\projectlist {Web Development}
+             {
+                 \begin{itemize}[leftmargin=0.5cm]
+                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
+                         \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
+                     \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
+                         \href{http://www.iitk.ac.in/hall5} {http://www.iitk.ac.in/hall5}
+                     \item \textbf{ALI}: Antaragni Leadership Initiative.
+                         \href{www.antargni.in/ali} {www.antargni.in/ali}
                  \end{itemize}
              }
 
@@ -524,7 +531,9 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {Head, Major Events and Competitions, Antaragni'14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Oversaw a team of \textbf{150} students for a span of 8 months.
+                   \item Organized Mr. and Ms. Fresher's competition for the first time in IIT Kanpur.
+                   \item Worked alongside the Creative team to promote Antaragni through our Social Media Campaign
+                       and Social Campaign which focussed on road safety.
                \end{itemize}
           }
 
