--- a/cv.tex
+++ b/cv.tex
@@ -10,8 +10,6 @@
 
 \usepackage{xunicode,xltxtra,url,parskip} % Formatting packages
 
-\usepackage{marvosym} % Allows the use of symbols
-
 \usepackage{scrpage2} % Provides headers and footers configuration
 
 \usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors
@@ -33,6 +31,8 @@
 \titlespacing{\section}{0pt}{3pt}{3pt} % Spacing around sections
 
 \usepackage{enumitem} % For left margin removal in itemize
+
+\usepackage{marvosym} % Allows the use of symbols
 
 %----------------------------------------------------------------------------------------
 % PAGE GEOMETRY
@@ -107,7 +107,7 @@
 }
 
 \newcommand{\github}{
-    \includegraphics[height=12pt]{octocatvector.eps}
+    \includegraphics[height=9pt]{icons/octa.png}
 }
 
 %----------------------------------------------------------------------------------------
@@ -120,19 +120,13 @@
 
 \titleformat{\section}{\large\scshape\raggedright}{}{0em}{}[\titlerule] % Section formatting
 
-% \pagestyle{scrheadings} % Print the headers and footers on all pages
-
-% \addtolength{\voffset}{-0.5in} % Adjust the vertical offset - less whitespace at the top of the page
-% \addtolength{\textheight}{3cm} % Adjust the text height - less whitespace at the bottom of the page
-% \addtolength{\textwidth}{-2cm}
-
 %----------------------------------------------------------------------------------------
 % HEADER SECTION
 %----------------------------------------------------------------------------------------
 
 {
     \begin{tabular}{rl}
-        \multirow{3}{0.75\linewidth}{
+        \multirow{3}{0.73\linewidth}{
             {
                 \addfontfeature{LetterSpace=20.0}\fontsize{24}{24}\selectfont\scshape
                 Srijan R. Shetty
@@ -143,6 +137,7 @@
         & {\Large\Mobilefone} +(91) 9005900383 \\
         & {\Large\Info} \href{cse.iitk.ac.in/users/srijans}{cse.iitk.ac.in/users/srijans}\\
         & {\Large\Letter} \href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}\\
+        & {\github} \href{https://github.com/srijanshetty}{https://github.com/srijanshetty}\\
     \end{tabular}
 }
 
